@@ -236,18 +236,22 @@ class CategoryViewer {
 		$r = '';
 		if( count( $this->children ) > 0 ) {
 			# Showing subcategories
+			$r .= "<div id=\"subcategories\">\n";
 			$r .= '<h2>' . wfMsg( 'subcategories' ) . "</h2>\n";
 			$r .= wfMsgExt( 'subcategorycount', array( 'parse' ), count( $this->children) );
 			$r .= $this->formatList( $this->children, $this->children_start_char );
+			$r .= "\n</div>";
 		}
 		return $r;
 	}
 
 	function getPagesSection() {
 		$ti = htmlspecialchars( $this->title->getText() );
-		$r = '<h2>' . wfMsg( 'category_header', $ti ) . "</h2>\n";
+		$r = "<div id=\"pages\">\n";
+		$r .= '<h2>' . wfMsg( 'category_header', $ti ) . "</h2>\n";
 		$r .= wfMsgExt( 'categoryarticlecount', array( 'parse' ), count( $this->articles) );
 		$r .= $this->formatList( $this->articles, $this->articles_start_char );
+		$r .= "\n</div>";
 		return $r;
 	}
 
